--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "height": 300,
     "min-width": 300,
     "min-height": 150,
-    "max-width": 800,
-    "max-height": 400,
     "toolbar": false,
     "transparent": true,
-	"resizable" : false
+    "resizable": false
   },
   "as_desktop": true,
   "resizable": false,
   "chromium-args": "--ignore-gpu-blacklist",
+  "js-flags": "--harmony_proxies --harmony_collections",
   "webkit": {
     "plugin": true
   },
   "dependencies": {
-    "dbfm-app-sdk": "0.0.4",
+    "dbfm-app-sdk": "0.0.6",
     "dbfm-web-sdk": "0.0.4",
     "open": "0.0.5",
     "request": "^2.44.0"
