--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TimoFM",
-  "version": "1.0.3",
-  "download" : "http://pan.baidu.com/s/1gdxh1Ft",
+  "version": "1.0.4",
+  "download" : "http://pan.baidu.com/s/1lMutS",
   "main": "index.html",
   "window": {
     "frame": false,
