--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TimoFM",
   "version": "1.0.6",
-  "download" : "http://pan.baidu.com/s/1c0AKOaG",
+  "download" : "http://pan.baidu.com/s/1c0kwu0S",
   "main": "index.html",
   "window": {
     "frame": false,
