修复滚动条滚动触发音量调节的问题

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TimoFM",
   "version": "1.0.7",
-  "download" : "http://pan.baidu.com/s/1gdtdNTD",
+  "download" : "hhttp://pan.baidu.com/s/1bndCViJ",
   "main": "index.html",
   "window": {
     "frame": false,
