--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TimoFM",
   "version": "1.0.7",
-  "download" : "http://pan.baidu.com/s/1bndCViJ",
+  "download" : "http://pan.baidu.com/s/1pJwRql1#path=%252FAPP",
   "main": "index.html",
   "window": {
     "frame": false,
