--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/sapjax/TimoFM"
-    }
+    },
+    "license": "MIT"
 }
