--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js",
+    "start": "electron .",
     "clean": "rm -rf ../dist",
     "build": "npm run build:osx",
     "build:osx": "npm run clean && electron-packager ./ TimoFM --out=../dist/osx --platform=darwin --arch=x64 --version=0.36.7 --icon=assets/images/TimoFM.icns",
