--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "electron .",
     "clean": "rm -rf ../dist",
-    "build": "npm run build:osx",
-    "build:osx": "npm run clean && electron-packager ./ TimoFM --out=../dist/osx --platform=darwin --arch=x64 --version=0.36.7 --icon=assets/images/TimoFM.icns",
-    "pack": "npm run pack:osx",
-    "pack:osx": "npm run build:osx && electron-builder \"../dist/osx/TimoFM-darwin-x64/TimoFM.app\" --platform=osx --out=\"../dist/osx\" --config=packager.json"
+    "pack:osx": "npm run clean && electron-packager ./ TimoFM --out=../dist/osx --platform=darwin --arch=x64 --version=0.36.7 --icon=assets/images/TimoFM.icns",
+    "pack:linux":"npm run clean && electron-packager ./ TimoFM --out=../dist/linux --platform=linux --arch=x64 --version=0.36.7",
+    "build:osx": "npm run pack:osx && electron-builder \"../dist/osx/TimoFM-darwin-x64/TimoFM.app\" --platform=osx --out=\"../dist/osx\" --config=packager.json",
+    "build:linux":"npm run pack:linux &&  electron-builder \"../dist/linux/TimoFM-linux-x64\" --platform=linux --out=\"../dist/linux\" --config=packager.json"
   },
   "download": "http://pan.baidu.com/s/1pJwRql1#path=%252FAPP",
   "dependencies": {
